--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
 <body>
   <div class="container">
     <div class="scanner-container">
-      <h2>Scan Your QR Code to Enter the Parking Lot</h2>
+      <h1>INTELLIPARK SCANNER</h1>
       <div id="reader"></div> <!-- QR code scanner element -->
       
-      <div id="qr-result">Scanned result will appear here</div> <!-- Scanned result display -->
+      <div id="qr-result">Scanned result will appear here</div><!-- Scanned result display -->
       <div id="loader" class="loader" style="display: none;"></div> <!-- Loader for API processes -->
       
       <button id="confirm-btn" style="display: none;">Confirm</button> <!-- Confirmation button -->
-      <button id="start-scanning">Start Scanning!</button> <!-- Button to start scanning -->
+      <button id="start-scanning">Scan QR</button> <!-- Button to start scanning -->
     </div>
   </div>
   
@@ -25,4 +25,3 @@
 </body>
 </html>
 
-/* this only */
