--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="scanner-container">
       <h1>INTELLIPARK SCANNER</h1>
-      <div id="reader"></div> <!-- QR code scanner element -->
+      <div id="reader"></div> <!-- QR code scanner -->
       
       <div id="qr-result">Scanned result will appear here</div><!-- Scanned result display -->
       <div id="loader" class="loader" style="display: none;"></div> <!-- Loader for API processes -->
